feat: add authorization checks, robust input validation, and improved error handling to professor controller and dashboard