@@ -6,54 +6,71 @@ import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import java.io.IOException;
-
-import com.unitrs.model.entity.User;
-import com.unitrs.model.entity.ClassSection;
-import com.unitrs.repository.ClassSectionRepository;
-import com.unitrs.repository.UserRepository;
-
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
+
+import com.unitrs.model.entity.User;
+import com.unitrs.model.entity.Role;
+import com.unitrs.model.entity.ClassSection;
+import com.unitrs.model.entity.AttendanceRecord;
+import com.unitrs.model.entity.Grade;
+import com.unitrs.repository.ClassSectionRepository;
+import com.unitrs.repository.UserRepository;
+import com.unitrs.repository.AttendanceRepository;
+import com.unitrs.repository.GradeRepository;
+import com.unitrs.utils.GradeCalculator;
+import com.unitrs.exceptions.ValidationException;
 
 @WebServlet("/professor/*")
 public class ProfessorController extends HttpServlet {
 
+    private static final Set<String> VALID_STATUSES = Set.of("PRESENT", "ABSENT", "LATE", "EXCUSED");
+
     private ClassSectionRepository classSectionRepository;
     private UserRepository userRepository;
-    private com.unitrs.repository.AttendanceRepository attendanceRepository;
-    private com.unitrs.repository.GradeRepository gradeRepository;
+    private AttendanceRepository attendanceRepository;
+    private GradeRepository gradeRepository;
 
     @Override
     public void init() throws ServletException {
         this.classSectionRepository = new ClassSectionRepository();
         this.userRepository = new UserRepository();
-        this.attendanceRepository = new com.unitrs.repository.AttendanceRepository();
-        this.gradeRepository = new com.unitrs.repository.GradeRepository();
+        this.attendanceRepository = new AttendanceRepository();
+        this.gradeRepository = new GradeRepository();
     }
 
     @Override
     protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
         String path = request.getPathInfo();
-        String action = request.getParameter("action");
+        User user = (User) request.getSession().getAttribute("user");
+
+        if (user == null || (user.getRole() != Role.PROFESSOR && user.getDeanSchoolId() == null)) {
+            response.sendRedirect(request.getContextPath() + "/auth/login");
+            return;
+        }
 
         if (path == null || path.equals("/") || path.equals("/dashboard")) {
-            User user = (User) request.getSession().getAttribute("user");
-
             List<ClassSection> sections = classSectionRepository.findByProfessorId(user.getId());
 
             Map<ClassSection, List<User>> sectionStudentsMap = new LinkedHashMap<>();
-            Map<Integer, List<com.unitrs.model.entity.AttendanceRecord>> sectionAttendanceMap = new LinkedHashMap<>();
-            Map<Integer, List<com.unitrs.model.entity.Grade>> sectionGradesMap = new LinkedHashMap<>();
+            Map<Integer, List<AttendanceRecord>> sectionAttendanceMap = new LinkedHashMap<>();
+            Map<Integer, List<Grade>> sectionGradesMap = new LinkedHashMap<>();
 
             for (ClassSection section : sections) {
                 List<User> students = userRepository.findStudentsByClassSection(section.getId());
                 sectionStudentsMap.put(section, students);
 
-                List<com.unitrs.model.entity.AttendanceRecord> records = attendanceRepository.findRecordsByClassSectionId(section.getId());
+                List<AttendanceRecord> records = attendanceRepository.findRecordsByClassSectionId(section.getId());
+                for (AttendanceRecord record : records) {
+                    record.setEntries(attendanceRepository.findEntriesByRecordId(record.getId()));
+                }
                 sectionAttendanceMap.put(section.getId(), records);
 
-                List<com.unitrs.model.entity.Grade> grades = gradeRepository.findGradesByClassSectionId(section.getId());
+                List<Grade> grades = gradeRepository.findGradesByClassSectionId(section.getId());
                 sectionGradesMap.put(section.getId(), grades);
             }
 
@@ -61,17 +78,21 @@ public class ProfessorController extends HttpServlet {
             request.setAttribute("sectionAttendanceMap", sectionAttendanceMap);
             request.setAttribute("sectionGradesMap", sectionGradesMap);
 
-            if (request.getParameter("success") != null) {
-                request.setAttribute("successMessage", "Attendance successfully saved!");
+            String success = request.getParameter("success");
+            if (success != null) {
+                if ("attendance".equals(success)) {
+                    request.setAttribute("successMessage", "Attendance successfully recorded!");
+                } else if ("grades".equals(success)) {
+                    request.setAttribute("successMessage", "Grades successfully saved!");
+                } else {
+                    request.setAttribute("successMessage", "Operation completed successfully!");
+                }
             }
             if (request.getParameter("error") != null) {
-                request.setAttribute("errorMessage", "Failed to save attendance: " + request.getParameter("error"));
+                request.setAttribute("errorMessage", request.getParameter("error"));
             }
 
             request.getRequestDispatcher("/WEB-INF/views/professor/dashboard.jsp").forward(request, response);
-        } else if (path.equals("/attendance/view")) {
-
-            response.sendRedirect(request.getContextPath() + "/professor/dashboard");
         } else {
             response.sendRedirect(request.getContextPath() + "/professor/dashboard");
         }
@@ -80,14 +101,42 @@ public class ProfessorController extends HttpServlet {
     @Override
     protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
         String path = request.getPathInfo();
+        User user = (User) request.getSession().getAttribute("user");
+
+        if (user == null || (user.getRole() != Role.PROFESSOR && user.getDeanSchoolId() == null)) {
+            response.sendRedirect(request.getContextPath() + "/auth/login");
+            return;
+        }
 
         if (path != null && path.equals("/attendance/save")) {
             try {
-                int classSectionId = Integer.parseInt(request.getParameter("classSectionId"));
-                String sessionDateStr = request.getParameter("sessionDate");
-                java.sql.Date sessionDate = java.sql.Date.valueOf(sessionDateStr);
+                String sectionIdStr = request.getParameter("classSectionId");
+                if (sectionIdStr == null || sectionIdStr.trim().isEmpty()) {
+                    throw new ValidationException("Class section ID is required.");
+                }
+                int classSectionId = Integer.parseInt(sectionIdStr.trim());
 
-                com.unitrs.model.entity.AttendanceRecord record = attendanceRepository.findRecordBySectionAndDate(classSectionId, sessionDate);
+                ClassSection section = classSectionRepository.findById(classSectionId);
+                if (section == null) {
+                    throw new ValidationException("Class section not found.");
+                }
+                if (section.getProfessorId() != user.getId() && user.getDeanSchoolId() == null) {
+                    throw new ValidationException("You are not authorized to manage attendance for this section.");
+                }
+
+                String sessionDateStr = request.getParameter("sessionDate");
+                if (sessionDateStr == null || sessionDateStr.trim().isEmpty()) {
+                    throw new ValidationException("Please select a valid session date.");
+                }
+
+                java.sql.Date sessionDate;
+                try {
+                    sessionDate = java.sql.Date.valueOf(sessionDateStr.trim());
+                } catch (IllegalArgumentException e) {
+                    throw new ValidationException("Invalid session date format.");
+                }
+
+                AttendanceRecord record = attendanceRepository.findRecordBySectionAndDate(classSectionId, sessionDate);
                 int recordId;
                 if (record == null) {
                     recordId = attendanceRepository.createRecord(classSectionId, sessionDate);
@@ -98,49 +147,85 @@ public class ProfessorController extends HttpServlet {
                 List<User> students = userRepository.findStudentsByClassSection(classSectionId);
                 for (User student : students) {
                     String status = request.getParameter("status_" + student.getId());
-                    if (status != null && !status.isEmpty()) {
-                        attendanceRepository.saveEntry(recordId, student.getId(), status);
+                    if (status != null && VALID_STATUSES.contains(status.trim().toUpperCase())) {
+                        attendanceRepository.saveEntry(recordId, student.getId(), status.trim().toUpperCase());
                     }
                 }
 
-                response.sendRedirect(request.getContextPath() + "/professor/dashboard?success=1");
+                response.sendRedirect(request.getContextPath() + "/professor/dashboard?success=attendance");
             } catch (Exception e) {
                 e.printStackTrace();
-                response.sendRedirect(request.getContextPath() + "/professor/dashboard?error=" + java.net.URLEncoder.encode(e.getMessage(), "UTF-8"));
+                String msg = (e.getMessage() != null && !e.getMessage().trim().isEmpty()) ? e.getMessage() : "Failed to save attendance.";
+                response.sendRedirect(request.getContextPath() + "/professor/dashboard?error=" + URLEncoder.encode(msg, StandardCharsets.UTF_8));
             }
         } else if (path != null && path.equals("/grades/save")) {
             try {
-                int classSectionId = Integer.parseInt(request.getParameter("classSectionId"));
+                String sectionIdStr = request.getParameter("classSectionId");
+                if (sectionIdStr == null || sectionIdStr.trim().isEmpty()) {
+                    throw new ValidationException("Class section ID is required.");
+                }
+                int classSectionId = Integer.parseInt(sectionIdStr.trim());
 
-                List<com.unitrs.model.entity.Grade> existingGrades = gradeRepository.findGradesByClassSectionId(classSectionId);
+                ClassSection section = classSectionRepository.findById(classSectionId);
+                if (section == null) {
+                    throw new ValidationException("Class section not found.");
+                }
+                if (section.getProfessorId() != user.getId() && user.getDeanSchoolId() == null) {
+                    throw new ValidationException("You are not authorized to manage grades for this section.");
+                }
 
-                for (com.unitrs.model.entity.Grade grade : existingGrades) {
+                List<Grade> existingGrades = gradeRepository.findGradesByClassSectionId(classSectionId);
+
+                for (Grade grade : existingGrades) {
                     int eid = grade.getEnrollmentId();
                     String attStr = request.getParameter("attendance_" + eid);
                     String assStr = request.getParameter("assignment_" + eid);
                     String midStr = request.getParameter("midterm_" + eid);
                     String finStr = request.getParameter("final_" + eid);
 
-                    if (attStr != null && assStr != null && midStr != null && finStr != null) {
-                        double att = Double.parseDouble(attStr);
-                        double ass = Double.parseDouble(assStr);
-                        double mid = Double.parseDouble(midStr);
-                        double fin = Double.parseDouble(finStr);
+                    double att = parseScore(attStr, grade.getAttendanceScore(), "Attendance", grade.getStudentName());
+                    double ass = parseScore(assStr, grade.getAssignmentScore(), "Assignment", grade.getStudentName());
+                    double mid = parseScore(midStr, grade.getMidtermScore(), "Midterm", grade.getStudentName());
+                    double fin = parseScore(finStr, grade.getFinalScore(), "Final", grade.getStudentName());
 
-                        double total = com.unitrs.utils.GradeCalculator.calculateTotal(att, ass, mid, fin);
-                        String letter = com.unitrs.utils.GradeCalculator.calculateLetterGrade(total);
-                        double gpa = com.unitrs.utils.GradeCalculator.calculateGpaPoint(letter);
-
-                        gradeRepository.saveGrade(eid, att, ass, mid, fin, total, letter, gpa);
+                    if (!GradeCalculator.isValidAttendance(att)) {
+                        throw new ValidationException("Attendance score for " + grade.getStudentName() + " must be between 0 and 15.");
                     }
+                    if (!GradeCalculator.isValidAssignment(ass)) {
+                        throw new ValidationException("Assignment score for " + grade.getStudentName() + " must be between 0 and 25.");
+                    }
+                    if (!GradeCalculator.isValidMidterm(mid)) {
+                        throw new ValidationException("Midterm score for " + grade.getStudentName() + " must be between 0 and 30.");
+                    }
+                    if (!GradeCalculator.isValidFinal(fin)) {
+                        throw new ValidationException("Final score for " + grade.getStudentName() + " must be between 0 and 30.");
+                    }
+
+                    double total = GradeCalculator.calculateTotal(att, ass, mid, fin);
+                    String letter = GradeCalculator.calculateLetterGrade(total);
+                    double gpa = GradeCalculator.calculateGpaPoint(letter);
+
+                    gradeRepository.saveGrade(eid, att, ass, mid, fin, total, letter, gpa);
                 }
-                response.sendRedirect(request.getContextPath() + "/professor/dashboard?success=1");
+                response.sendRedirect(request.getContextPath() + "/professor/dashboard?success=grades");
             } catch (Exception e) {
                 e.printStackTrace();
-                response.sendRedirect(request.getContextPath() + "/professor/dashboard?error=" + java.net.URLEncoder.encode(e.getMessage(), "UTF-8"));
+                String msg = (e.getMessage() != null && !e.getMessage().trim().isEmpty()) ? e.getMessage() : "Failed to save grades.";
+                response.sendRedirect(request.getContextPath() + "/professor/dashboard?error=" + URLEncoder.encode(msg, StandardCharsets.UTF_8));
             }
         } else {
             response.sendRedirect(request.getContextPath() + "/professor/dashboard");
+        }
+    }
+
+    private double parseScore(String value, double fallback, String fieldName, String studentName) throws ValidationException {
+        if (value == null || value.trim().isEmpty()) {
+            return fallback;
+        }
+        try {
+            return Double.parseDouble(value.trim());
+        } catch (NumberFormatException e) {
+            throw new ValidationException("Invalid number format for " + fieldName + " of " + studentName + ".");
         }
     }
 }
